--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,12 @@
+:root {
+  --futureColor: #D4E2CB;
+  --presentColor: #E3C1C3;
+  --pastColor: #CFC1E3;
+  --buttonColor: #857896;
+}
+
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Playfair Display', serif;
   font-size: 16px;
   line-height: 1;
 }
@@ -15,7 +22,7 @@ textarea {
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
+  background-color: white;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -43,17 +50,17 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: var(--pastColor);
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: var(--presentColor);
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: var(--futureColor);
   color: white;
 }
 
@@ -61,11 +68,15 @@ textarea {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color: var(--buttonColor);
   color: white;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+}
+
+.fa-regular {
+  color: black;
 }
