--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,19 @@ textarea {
   transition: all 0.3s ease-in-out;
 }
 
+.clearBtn {
+  font-size: 18px;
+  border: 2px solid black;
+  background-color: white;
+}
+
 .fa-regular {
   color: black;
+}
+
+.footer {
+  width: auto;
+  max-width: 680px;
+  margin-top: 20px;
+  padding: 0 20px;
 }
